--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.13",
+		"axios": "^1.2.2",
 		"postcss": "^8.4.19",
+		"svelte-local-storage-store": "^0.3.2",
 		"tailwindcss": "^3.2.4"
 	}
 }
